<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_inicio"
        android:icon="@drawable/home"
        android:title="@string/navbar_inicio" />
    <item
        android:id="@+id/nav_descargas"
        android:icon="@drawable/cloud_download"
        android:title="@string/navbar_descargas" />
    <item
        android:id="@+id/nav_premium"
        android:icon="@drawable/money"
        android:title="@string/navbar_premium"
        />
    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/help"
        android:title="@string/navbar_help" />
    <item
        android:id="@+id/nav_info"
        android:icon="@drawable/info"
        android:title="@string/navbar_info"
        />
</menu>